--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-     <img src="./soggycat.jpg"/>
+     <img style="height:100%;width:auto;" src="./soggycat.jpg"/>
 </body>
 </html>
