--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="https://soggy.cat/icon.jpg" />
-  <title>soggy.cat</title>
+  <title>soggy cat</title>
   <link rel="canonical" href="https://soggy.cat/" />
   <meta name="description" content="" />
   <meta name="robots" content="index,follow" />
