--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="https://soggy.cat/icon.jpg" />
+  <link rel="icon" href="icon.jpg">
+  <link rel="canonical" href="https://soggy.cat/">
   <title>soggy cat</title>
-  <link rel="canonical" href="https://soggy.cat/" />
-  <meta name="description" content="" />
-  <meta name="robots" content="index,follow" />
-  <meta property="og:title" content="soggy.cat" />
-  <meta property="og:description" content="A picture of a wet cat inside a bathtub." />
-  <meta name="twitter:card" content="summary" />
-  <meta name="title" content="soggy.cat">
+  <meta charset="utf-8">
+  <meta property="og:title" content="soggy.cat">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:description" content="A picture of a wet cat inside a bathtub.">
+  <meta name="title" content="soggy cat">
   <meta name="description" content="A picture of a wet cat inside a bathtub.">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
