--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="canonical" href="https://soggy.cat/">
   <title>soggy cat</title>
   <meta charset="utf-8">
-  <meta property="og:title" content="soggy.cat">
+  <meta property="og:title" content="soggy cat">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:description" content="A picture of a wet cat inside a bathtub.">
   <meta name="title" content="soggy cat">
