--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="icon.jpg">
+  <link rel="icon" href="img/icon.jpg">
   <link rel="canonical" href="https://soggy.cat/">
   <title>soggy cat</title>
   <meta charset="utf-8">
@@ -14,6 +14,6 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-     <img style="height:100%;width:auto;" src="./soggycat.jpg"/>
+     <img style="height:100%;width:auto;" src="img/soggycat.jpg"/>
 </body>
 </html>
