--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
   <link rel="canonical" href="https://soggy.cat/">
   <title>soggy cat</title>
   <meta charset="utf-8">
-  <meta property="og:title" content="soggy cat">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:description" content="A picture of a wet cat inside a bathtub.">
-  <meta name="title" content="soggy cat">
-  <meta name="description" content="A picture of a wet cat inside a bathtub.">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="description" content="A picture of a wet cat inside a bathtub.">
+  <meta property="og:description" content="A picture of a wet cat inside a bathtub.">
+  <meta name="title" content="soggy cat">
+  <meta property="og:title" content="soggy cat">
+  <script>
+    //redirect to https
+    if (window.location.protocol != "https:")
+        window.location.protocol = "https"
+  </script>
 </head>
 <body>
      <img style="height:100%;width:auto;" src="img/soggycat.jpg"/>
