--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta property="og:description" content="A picture of a wet cat inside a bathtub.">
   <meta name="title" content="soggy cat">
   <meta property="og:title" content="soggy cat">
+  <meta property="og:image" content="img/soggycat.jpg">
   <script>
     //redirect to https
     if (window.location.protocol != "https:")
