--- a/github.html
+++ b/github.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <title>soggy.cat github repo</title>
-<meta http-equiv="refresh" content="0; url=https://github.com/soggy-cat/soggy-cat.github.io">
+<meta http-equiv="refresh" content="3; url=https://github.com/soggy-cat/soggy-cat.github.io">
+<link href="static/redirect.css" rel="stylesheet">
 </head>
 <body>
 <!--Fallback for old browsers-->
 <a href="https://github.com/soggy-cat/soggy-cat.github.io">Link to the soggy.cat github repository</a>
+<img src="img/redirectioncat.jpg" id="cat">
 </body>
 </html>
