--- a/dry_nocss.html
+++ b/dry_nocss.html
@@ -20,6 +20,6 @@
   </script>
 </head>
 <body>
-     <img style="height:100%;width:50%;" src="img/dry.jpg"/>
+     <img style="height:82%;width:auto;" src="img/dry.jpg"/>
 </body>
 </html>
