--- a/dry_nocss.html
+++ b/dry_nocss.html
@@ -1,25 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="icon" href="img/icon.jpg">
-  <link rel="canonical" href="https://soggy.cat/dry_nocss.html">
-  <title>dry?? cat</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="A picture of a dry cat named Shark.">
-  <meta property="og:description" content="A picture of a dry cat named Shark.">
-  <meta name="title" content="dry?? cat">
-  <meta property="og:title" content="dry?? cat">
-  <meta property="og:image" content="https://soggy.cat/img/dry.jpg">
-  <script>
-    //redirect to https
-    if (window.location.protocol != "https:")
-        window.location.protocol = "https"
-  </script>
-</head>
-<body>
-     <img style="height:auto;width:50%;" src="img/dry.jpg"/>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url='https://soggy.cat/dry/nocss'" />
+  </head>
+  <body>
+    <p>Redirecting to /dry/nocss...</p>
+  </body>
 </html>
