--- a/dry/index.html
+++ b/dry/index.html
@@ -5,7 +5,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
   <link rel="icon" href="img/icon.jpg">
-  <link rel="canonical" href="https://soggy.cat/dry.html">
+  <link rel="canonical" href="https://soggy.cat/dry/nocss">
   <link rel="stylesheet" href="static/main.css">
   <title>dry?? cat</title>
   <meta charset="utf-8">
