--- a/dry/index.html
+++ b/dry/index.html
@@ -19,7 +19,7 @@
   <meta property="og:image" content="https://soggy.cat/img/dry.jpg">
 </head>
 <body>
-     <img id="soggycat" src="img/dry.jpg" data-tilt data-tilt-scale="1.06" />
+     <img id="soggycat" src="https://soggy.cat/img/dry.jpg" data-tilt data-tilt-scale="1.06" />
      <div id="sidemenu">
      <a href="github.html" class="menubuttonsa"><div class="menubuttons"><img src='img/github.png'/>GitHub</div></a>
      <a href="dry_nocss.html" class="menubuttonsa"><div class="menubuttons"><img src='img/nocss.svg'/>No CSS</div></a>
