guess i'll be fixing urls for some time

--- a/dry/index.html
+++ b/dry/index.html
@@ -4,7 +4,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
-  <link rel="icon" href="img/icon.jpg">
+  <link rel="icon" href="https://soggy.cat/img/icon.jpg">
   <link rel="canonical" href="https://soggy.cat/dry/nocss">
   <link rel="stylesheet" href="static/main.css">
   <title>dry?? cat</title>
