--- a/dry/index.html
+++ b/dry/index.html
@@ -5,8 +5,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
   <link rel="icon" href="https://soggy.cat/img/icon.jpg">
-  <link rel="canonical" href="https://soggy.cat/dry/nocss">
-  <link rel="stylesheet" href="static/main.css">
+  <link rel="canonical" href="https://soggy.cat/dry/">
+  <link rel="stylesheet" href="https://soggy.cat/static/main.css">
   <title>dry?? cat</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,11 +21,11 @@
 <body>
      <img id="soggycat" src="https://soggy.cat/img/dry.jpg" data-tilt data-tilt-scale="1.06" />
      <div id="sidemenu">
-     <a href="github.html" class="menubuttonsa"><div class="menubuttons"><img src='img/github.png'/>GitHub</div></a>
-     <a href="dry_nocss.html" class="menubuttonsa"><div class="menubuttons"><img src='img/nocss.svg'/>No CSS</div></a>
+     <a href="https://soggy.cat/github" class="menubuttonsa"><div class="menubuttons"><img src='https://soggy.cat/github.png'/>GitHub</div></a>
+     <a href="https://soggy.cat/" class="menubuttonsa"><div class="menubuttons"><img src='https://soggy.cat/img/nocss.svg'/>No CSS</div></a>
      </div>
      <button id="circlebtn"></button>
-     <script src='static/vanillatilt.js'></script>
-     <script src="static/main.js"></script>
+     <script src='https://soggy.cat/static/vanillatilt.js'></script>
+     <script src="https://soggy.cat/static/main.js"></script>
 </body>
 </html>
