--- a/dry/nocss/index.html
+++ b/dry/nocss/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="img/icon.jpg">
-  <link rel="canonical" href="https://soggy.cat/dry_nocss.html">
+  <link rel="icon" href="https://soggy.cat/img/icon.jpg">
+  <link rel="canonical" href="https://soggy.cat/dry/nocss">
   <title>dry?? cat</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,6 +20,6 @@
   </script>
 </head>
 <body>
-     <img style="height:auto;width:50%;" src="img/dry.jpg"/>
+     <img style="height:auto;width:50%;" src="https://soggy.cat/img/dry.jpg"/>
 </body>
 </html>
