--- a/dry/index.html
+++ b/dry/index.html
@@ -21,7 +21,7 @@
 <body>
      <img id="soggycat" src="https://soggy.cat/img/dry.jpg" data-tilt data-tilt-scale="1.06" />
      <div id="sidemenu">
-     <a href="https://soggy.cat/github" class="menubuttonsa"><div class="menubuttons"><img src='https://soggy.cat/github.png'/>GitHub</div></a>
+     <a href="https://soggy.cat/github" class="menubuttonsa"><div class="menubuttons"><img src='https://soggy.cat/img/github.png'/>GitHub</div></a>
      <a href="https://soggy.cat/" class="menubuttonsa"><div class="menubuttons"><img src='https://soggy.cat/img/nocss.svg'/>No CSS</div></a>
      </div>
      <button id="circlebtn"></button>
