--- a/github/index.html
+++ b/github/index.html
@@ -3,14 +3,9 @@
 <head>
 <title>soggy.cat github repo!</title>
 <link href="https://soggy.cat/static/redirect.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script>
-jQuery(function($){
-jQuery("#delayFrame").slideUp(300).delay(2000).fadeIn(400);});
-</script>
+<meta http-equiv="refresh" content="3; url='https://github.com/soggy-cat/soggy-cat.github.io'" />
 </head>
 <body>
 <img src="https://soggy.cat/img/redirectioncat.jpg" id="epiccat">
-<iframe width="100%" height="100%" id="delayFrame" src="https://github.com/soggy-cat/soggy-cat.github.io"></iframe>
 </body>
 </html>
