--- a/github/index.html
+++ b/github/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="icon" href="https://soggy.cat/img/icon.jpg">
 <title>soggy.cat github repo!</title>
 <link href="https://soggy.cat/static/redirect.css" rel="stylesheet">
 <meta http-equiv="refresh" content="3; url='https://github.com/soggy-cat/soggy-cat.github.io'" />
