--- a/github/index.html
+++ b/github/index.html
@@ -7,6 +7,6 @@
 <meta http-equiv="refresh" content="3; url='https://github.com/soggy-cat/soggy-cat.github.io'" />
 </head>
 <body>
-<img src="https://soggy.cat/img/redirectioncat.jpg" id="epiccat">
+<img src="https://soggy.cat/img/redirectioncat.jpg" id="cat epiccat">
 </body>
 </html>
