--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <meta property="og:title" content="soggy cat">
   <meta property="og:image" content="https://soggy.cat/img/soggycat.jpg">
 </head>
-<body>
-     <img id="soggycat" src="https://soggy.cat/img/soggycat.jpg" data-tilt data-tilt-scale="1.06" onclick='playRandomSound()' />
+<body onclick='playRandomSound()'>
+     <img id="soggycat" src="https://soggy.cat/img/soggycat.jpg" data-tilt data-tilt-scale="1.06" />
      <div id="sidemenu">
      <a href="https://soggy.cat/github" class="menubuttonsa"><div class="menubuttons"><img src='https://soggy.cat/img/github.png'/>GitHub</div></a>
      <a href="https://soggy.cat/nocss" class="menubuttonsa"><div class="menubuttons"><img src='https://soggy.cat/img/nocss.svg'/>No CSS</div></a>
