--- a/dry/index.html
+++ b/dry/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
-  <link rel="icon" href="https://soggy.cat/img/icon.jpg">
-  <link rel="canonical" href="https://soggy.cat/dry/">
-  <link rel="stylesheet" href="https://soggy.cat/static/main.css">
+  <link rel="preconnect" href="//fonts.googleapis.com">
+  <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
+  <link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
+  <link rel="icon" href="icon.webp">
+  <link rel="canonical" href="/dry">
+  <link rel="stylesheet" href="/static/main.css">
   <title>dry?? cat</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,16 +16,19 @@
   <meta property="og:description" content="A picture of a dry cat named Shark.">
   <meta name="title" content="dry?? cat">
   <meta property="og:title" content="dry?? cat">
-  <meta property="og:image" content="https://soggy.cat/img/dry.jpg">
+  <meta property="og:image" content="dry.webp">
 </head>
 <body>
-     <img id="soggycat" src="https://soggy.cat/img/dry.jpg" data-tilt data-tilt-scale="1.06" />
+     <img id="soggycat" src="dry.webp" data-tilt data-tilt-scale="1.06" />
+
      <div id="sidemenu">
-     <a href="https://soggy.cat/github" class="menubuttonsa"><div class="menubuttons"><img src='https://soggy.cat/img/github.png'/>GitHub</div></a>
-     <a href="https://soggy.cat/dry/nocss" class="menubuttonsa"><div class="menubuttons"><img src='https://soggy.cat/img/nocss.svg'/>No CSS</div></a>
+     	<a href="/github" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/github.webp'/>GitHub</div> </a>
+     	<a href="/nocss" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/nocss.svg'/>No CSS</div> </a>
      </div>
+
      <button id="circlebtn"></button>
-     <script src='https://soggy.cat/static/vanillatilt.js'></script>
-     <script src="https://soggy.cat/static/main.js"></script>
+
+     	<script src='/static/vanillatilt.js'></script>
+     	<script src='/static/main.js'></script>
 </body>
 </html>
