--- a/gallery/index.html
+++ b/gallery/index.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="0; url='https://twitter.com/sogful/status/1687887989211299840'" />
   </head>
   <body>
-    <p>Redirecting to /gallery...</p>
+    <p>Redirecting you to the gallery...</p>
   </body>
 </html>
