--- a/nocss/index.html
+++ b/nocss/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="icon" href="/img/icon.webp">
-  <link rel="canonical" href="../nocss">
+  <link rel="canonical" href="/nocss">
   <title>soggy cat</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
   <meta property="og:description" content="A picture of a wet cat inside a bathtub.">
   <meta name="title" content="soggy cat">
   <meta property="og:title" content="soggy cat">
-  <meta property="og:image" content="../img/soggycat.webp">
+  <meta property="og:image" content="/img/soggycat.webp">
   <script>
     //redirect to https
     if (window.location.protocol != "https:")
@@ -20,6 +20,6 @@
   </script>
 </head>
 <body>
-     <img style="height:100%;width:auto;" src="../img/soggycat.webp"/>
+     <img style="height:100%;width:auto;" src="/img/soggycat.webp"/>
 </body>
 </html>
