--- a/dry/index.html
+++ b/dry/index.html
@@ -22,8 +22,8 @@
      <img id="soggycat" src="dry.webp" data-tilt data-tilt-scale="1.06" />
 
      <div id="sidemenu">
-     	<a href="/github" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/github.webp'/>GitHub</div> </a>
-     	<a href="/nocss" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/nocss.svg'/>No CSS</div> </a>
+     	<a href="/github/" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/github.webp'/>GitHub</div> </a>
+     	<a href="nocss" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/nocss.svg'/>No CSS</div> </a>
      </div>
 
      <button id="circlebtn"></button>
