--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
      <img id="soggycat" src="/img/soggycat.webp" data-tilt data-tilt-scale="1.06" />
      <div id="sidemenu">
-     <a href="github/" class="menubuttonsa"><div class="menubuttons"><img src='/img/github.webp'/>GitHub</div></a>
+     <a href="/github/" class="menubuttonsa"><div class="menubuttons"><img src='/img/github.webp'/>GitHub</div></a>
      <a href="nocss/" class="menubuttonsa"><div class="menubuttons"><img src='/img/nocss.svg'/>No CSS</div></a>
      </div>
      <button id="circlebtn"></button>
