Revert "improve file quality and reduce file size, cool new github redirect animation, relative urls"

--- a/dry/nocss/index.html
+++ b/dry/nocss/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" href="../icon.webp">
-  <link rel="canonical" href="/dry/nocss">
+  <link rel="icon" href="https://soggy.cat/img/icon.jpg">
+  <link rel="canonical" href="https://soggy.cat/dry/nocss">
   <title>dry?? cat</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
   <meta property="og:description" content="A picture of a dry cat named Shark.">
   <meta name="title" content="dry?? cat">
   <meta property="og:title" content="dry?? cat">
-  <meta property="og:image" content="../dry.webp">
+  <meta property="og:image" content="https://soggy.cat/img/dry.jpg">
   <script>
     //redirect to https
     if (window.location.protocol != "https:")
@@ -20,6 +20,6 @@
   </script>
 </head>
 <body>
-     <img style="height:auto;width:50%;" src="../dry.webp"/>
+     <img style="height:auto;width:50%;" src="https://soggy.cat/img/dry.jpg"/>
 </body>
 </html>
