--- a/dry_nocss.html
+++ b/dry_nocss.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='/dry/nocss'" />
+    <meta http-equiv="refresh" content="0; url='https://soggy.cat/dry/nocss'" />
   </head>
   <body>
     <p>Redirecting to /dry/nocss...</p>
