--- a/github/index.html
+++ b/github/index.html
@@ -4,16 +4,9 @@
 <link rel="icon" href="https://soggy.cat/img/icon.jpg">
 <title>soggy.cat github repo!</title>
 <link href="https://soggy.cat/static/redirect.css" rel="stylesheet">
-<meta http-equiv="refresh" content="7; url='//github.com/soggy-cat/soggy-cat.github.io'" />
+<meta http-equiv="refresh" content="3; url='https://github.com/soggy-cat/soggy-cat.github.io'" />
 </head>
 <body>
-	<video id="video" width="1920" height="1080"
-		style=" width:99%;
-			height:99%;
-			position: absolute;"
-		loop autoplay muted playsinline>
-	<source src="shattered.webm" type="video/webm">
-	whoops no video get better browser
-	</video>
+<img src="https://soggy.cat/img/redirectioncat.jpg" id="epiccat">
 </body>
 </html>
