--- a/video/index.html
+++ b/video/index.html
@@ -1,8 +1,8 @@
 <head> 
-      <meta property="og:image" content="//cdn.discordapp.com/attachments/817456773996740670/1141463524967719042/dDk6y1N.gif">
+      <meta property="og:image" content="https://cdn.discordapp.com/attachments/817456773996740670/1141463524967719042/dDk6y1N.gif">
       <meta property="og:type" content="video.other">
-      <meta property="og:video:url" content="//cdn.discordapp.com/attachments/817456773996740670/1141463661601358006/b9DHTLU.mp4">
+      <meta property="og:video:url" content="https://cdn.discordapp.com/attachments/817456773996740670/1141463661601358006/b9DHTLU.mp4">
       <meta property="og:video:height" content="972">
       <meta property="og:video:width" content="718">
-      <meta http-equiv="refresh" content="0; url='//twitter.com/cvsilly_'"/>
+      <meta http-equiv="refresh" content="0; url='https://twitter.com/cvsilly_'"/>
 </head>
