--- a/github/index.html
+++ b/github/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" href="https://soggy.cat/img/icon.jpg">
+<link rel="icon" href="/img/github.webp">
 <title>soggy.cat github repo!</title>
-<link href="https://soggy.cat/static/redirect.css" rel="stylesheet">
+<link href="/static/redirect.css" rel="stylesheet">
 <meta http-equiv="refresh" content="7; url='//github.com/soggy-cat/soggy-cat.github.io'" />
 </head>
 <body>
