--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://twitter.com/sogful/status/1687887989211299840'" />
+    <meta http-equiv="refresh" content="0; url='//twitter.com/sogful/status/1687887989211299840'" />
   </head>
   <body>
     <p>Redirecting you to the gallery...</p>
