"im going insane" type of fixes rn

--- a/dry/nocss/index.html
+++ b/dry/nocss/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="icon" href="../icon.webp">
-  <link rel="canonical" href="/dry/nocss">
+  <link rel="canonical" href="/dry/nocss/">
   <title>dry?? cat</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
