--- a/dry_nocss.html
+++ b/dry_nocss.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='/dry/nocss'" />
+    <meta http-equiv="refresh" content="0; url='/dry/nocss/'" />
   </head>
   <body>
-    <p>Redirecting to /dry/nocss...</p>
+    <p>Redirecting to /dry/nocss/...</p>
   </body>
 </html>
