--- a/nocss/index.html
+++ b/nocss/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="icon" href="/img/icon.webp">
-  <link rel="canonical" href="/nocss">
+  <link rel="canonical" href="/nocss/">
   <title>soggy cat</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
