delete unused assets, add extra page for wii support
also somehow make dry.webp better???
by giving it more resolution and less
compression??????? what?????
how did that reduce the filesize??????

--- a/nocss/index.html
+++ b/nocss/index.html
@@ -20,6 +20,6 @@
   </script>
 </head>
 <body>
-     <img style="height:100%;width:auto;" src="/img/soggycat.webp"/>
+     <img style="height:auto;width:40%;" src="/img/soggycat.webp"/>
 </body>
 </html>
