--- a/github/index.html
+++ b/github/index.html
@@ -3,13 +3,13 @@
 <head>
 <link rel="icon" href="/img/github.webp">
 <title>soggy.cat github repo!</title>
-<link href="/static/redirect.css" rel="stylesheet">
+<link href="style.css" rel="stylesheet">
 <meta http-equiv="refresh" content="7; url='//github.com/soggy-cat/soggy-cat.github.io'" />
 </head>
-<body>
+<body scroll="no">
 	<video id="video" width="1920" height="1080"
-		style=" width:99%;
-			height:99%;
+		style=" width:100%;
+			height:100%;
 			position: absolute;"
 		loop autoplay muted playsinline>
 	<source src="shattered.webm" type="video/webm">
