add the gallery waiting room

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url='//twitter.com/sogful/status/1687887989211299840'" />
-  </head>
-  <body>
-    <p>Redirecting you to the gallery...</p>
-  </body>
+<html lang="en">
+	<head>
+		<title>three.js webgl - geometry - cube</title>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+	</head>
+	<body style="margin: 0px; padding: 0px;">
+		<script type="importmap">
+		{
+			"imports": {
+				"debug": "./debug.js",
+				"three": "./threejs/three.module.js",
+				"GLTFLoader": "./threejs/addons/GLTFLoader.js",
+				"DRACOLoader": "./threejs/addons/DRACOLoader.js",
+				"FirstPersonControls": "./threejs/addons/FirstPersonControls.js",
+				"PointerLockControls": "./threejs/addons/PointerLockControls.js",
+				"StandardControls": "./shared/StandardControls.js"
+			}
+		}
+		</script> 
+		<script type="module" src="index.js"></script> 
+	</body>
 </html>
