--- a/2024election/index.html
+++ b/2024election/index.html
@@ -27,7 +27,7 @@
       <input name="Choice" type="radio">
     </label>
     <label class="option-02">
-      <img class="two" src="cool.gif" onclick="window.open('https://soggy.cat/2024election/assets/NOOO.mp4')"></img>
+      <img class="two" src="https://soggy.cat/2024election/assets/cool.gif" onclick="window.open('https://soggy.cat/2024election/assets/NOOO.mp4')"></img>
       <input name="Choice" type="radio">
     </label>
   </div>
