Revert "change to noncustom invite since custom one is off"
This reverts commit eb713e1b74dab207123bd7955924310d468e2f3b.

--- a/discord/index.html
+++ b/discord/index.html
@@ -12,7 +12,7 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#64DAFF"/>
-    <meta http-equiv="refresh" content="0; url='discord://discord.gg/soggy-world-tm-992118472454717530'" />
+    <meta http-equiv="refresh" content="0; url='discord://discord.com/invite/soggycat'" />
 
     <script src="https://rawgit.com/bradley/Blotter/master/build/blotter.min.js"></script>
     <script src="https://rawgit.com/bradley/Blotter/master/build/materials/liquidDistortMaterial.js"></script>
