--- a/discord/index.html
+++ b/discord/index.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#64DAFF"/>
     <meta http-equiv="refresh" content="0; url='discord://discord.com/invite/soggycat'" />
+    <meta http-equiv="refresh" content="1; url='https://discord.com/invite/soggycat'" />
 
     <script src="https://rawgit.com/bradley/Blotter/master/build/blotter.min.js"></script>
     <script src="https://rawgit.com/bradley/Blotter/master/build/materials/liquidDistortMaterial.js"></script>
