--- a/stop/index.html
+++ b/stop/index.html
@@ -38,7 +38,7 @@ var message = [
        * {box-sizing: border-box;}
        
       .bg-image {
-        background-image: url("https://soggy.cat/stop/assets/fog.gif");
+        background-image: url("https://soggy.cat/stop/assets/fog2.gif");
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
