--- a/stop/index.html
+++ b/stop/index.html
@@ -63,7 +63,7 @@ var message = [
     <div class="bg-image"></div>
 
     <div class="bg-text">
-      <img class="coin" src="https://soggy.cat/stop/assets/sogcoin.gif"><br>
+      <img class="coin" src="https://soggy.cat/stop/assets/earth.png"><br>
       <img class="warn" src="https://soggy.cat/stop/assets/warn.png">
     </div>
     
