--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
   <link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
   <link rel="icon" href="/img/icon.webp">
-  <link rel="canonical" href="./">
+  <link rel="canonical" href="//soggy.cat/">
   <link rel="stylesheet" href="/static/main.css">
   <title>soggy cat</title>
   <meta charset="utf-8">
