fix canonical too here

--- a/dry/index.html
+++ b/dry/index.html
@@ -5,7 +5,7 @@
   <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
   <link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
   <link rel="icon" href="icon.webp">
-  <link rel="canonical" href="/dry/">
+  <link rel="canonical" href="https://soggy.cat/dry/">
   <link rel="stylesheet" href="/static/main.css">
   <title>dry?? cat</title>
   <meta charset="utf-8">
