relative links because nginx broke

--- a/thiscat/index.html
+++ b/thiscat/index.html
@@ -15,17 +15,17 @@ every night throughout the world dosens of people dream about this cat.</font></
     <td width="100"></td>
     <td width="200" valign="top"><font face="Arial,Helvetica,sans-serif" size="6">
   <br>
-  <a href="https://soggy.cat/thiscat/history">History</a><br>
+  <a href="history/">History</a><br>
   <a href="https://x.com/ssoggycat/status/1769507758959686107/photo/1">Theories</a><br>
-  <a href="https://soggy.cat/thiscat/portraits">Portraits</a><br>	
-  <a href="https://soggy.cat/thiscat/thiscat.png" download>Download</a><br>
+  <a href="portraits/">Portraits</a><br>	
+  <a href="thiscat.png" download>Download</a><br>
   <a href="https://x.com/messages/compose?recipient_id=1517610355999973377">Contact us</a><br>
 <br>
   </font></td>
 
   <td width="100"></td>
     <td width="500"><div align="center">
-    <img src="https://soggy.cat/thiscat/thiscat.png" alt="" width="348" height="408" border="0"></div></td>
+    <img src="thiscat.png" alt="" width="348" height="408" border="0"></div></td>
     <td width="100"></td>
 </tr>
 <tr>
