fix one link... because i am very smart

--- a/team/popcap/embed/index.html
+++ b/team/popcap/embed/index.html
@@ -55,7 +55,7 @@
         <a class="big">you can try:</a>
         <a class="small link" href="flashpoint://run/58c25834-d3dd-c6b2-1f5a-289996a36044">running it in flashpoint</a>
         <a class="big">or</a>
-        <a class="small link" href="https://soggy.cat/popcap/games/chuzzle/ChuzzleRAW.swf">downloading it locally</a>       
+        <a class="small link" href="https://s.soggy.cat/popcap/games/chuzzle/ChuzzleRAW.swf">downloading it locally</a>       
       </div>
       
      <div class="bar">
