--- a/thiscat/index.html
+++ b/thiscat/index.html
@@ -15,7 +15,7 @@ every night throughout the world dosens of people dream about this cat.</font></
     <td width="100"></td>
     <td width="200" valign="top"><font face="Arial,Helvetica,sans-serif" size="6">
   <br>
-  <a href="history/">History</a><br>
+  <a href="../faq/">History</a><br>
   <a href="https://x.com/ssoggycat/status/1769507758959686107/photo/1">Theories</a><br>
   <a href="portraits/">Portraits</a><br>	
   <a href="thiscat.png" download>Download</a><br>
