--- a/github/index.html
+++ b/github/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" href="/img/github.webp">
 <title>soggy.cat github repo!</title>
 <link href="style.css" rel="stylesheet">
-<meta http-equiv="refresh" content="7; url='//github.com/soggy-cat/soggy-cat.github.io'" />
+<meta http-equiv="refresh" content="7; url='//github.com/ssoggycat/soggy.cat'" />
 </head>
 <body scroll="no">
 	<video id="video" width="1920" height="1080"
@@ -13,7 +13,7 @@
 			position: absolute;"
 		loop autoplay muted playsinline>
 	<source src="shattered.webm" type="video/webm">
-	whoops no video get better browser
+	whoops no video get a better browser!!!!
 	</video>
 </body>
 </html>
