don't you hate it when you use threejs and then forget to use threejs

--- a/goog/index.html
+++ b/goog/index.html
@@ -5,7 +5,7 @@
 	<link rel="preconnect" href="//fonts.googleapis.com">
 	<link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
 	<link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
-	<link rel="icon" href="/img/icon.webp">
+	<link rel="icon" href="./img/goog.webp">
 	<link rel="canonical" href="https://goog.soggy.cat/">
 	<link rel="stylesheet" href="goog.css">
 	<title>Goog...</title>
