no embed so maybe this fixes it

--- a/goog/index.html
+++ b/goog/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:description" content="Goog...">
 	<meta name="title" content="soggy cat">
 	<meta property="og:title" content="Goog...">
-	<meta property="og:image" content="./img/goog.webp">
+	<meta property="og:image" content="/goog/img/goog.webp">
 </head>
 <body>
   <script type="importmap">
