fix for goog.soggy.cat?

--- a/goog/index.html
+++ b/goog/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:description" content="Goog...">
 	<meta name="title" content="soggy cat">
 	<meta property="og:title" content="Goog...">
-	<meta property="og:image" content="/goog/img/goog.webp">
+	<meta property="og:image" content="/img/goog.webp">
 </head>
 <body>
   <script type="importmap">
@@ -35,11 +35,11 @@
 	<div id="googtainer"></div>
 
 	<div id="sidemenu">
-		<a href="/github/" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/github.webp'/>GitHub</div> </a>
-		<a href="nocss" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/nocss.svg'/>No CSS</div> </a>
+		<a href="//soggy.cat/github/" class="menubuttonsa"> <div class="menubuttons"> <img src='//soggy.cat/img/github.webp'/>GitHub</div> </a>
+		<a href="nocss" class="menubuttonsa"> <div class="menubuttons"> <img src='//soggy.cat/img/nocss.svg'/>No CSS</div> </a>
 	</div>
 
 	<button id="circlebtn"></button>
-	<script src='/static/main.js'></script>
+	<script src='//soggy.cat/static/main.js'></script>
 </body>
 </html>
