fix some embed stuff

--- a/billy/index.html
+++ b/billy/index.html
@@ -16,7 +16,7 @@
   <meta property="og:description" content="A picture of.... william?">
   <meta name="title" content="billy...">
   <meta property="og:title" content="billy...">
-  <meta property="og:image" content="billy.webp">
+  <meta property="og:image" content="/billy/billy.webp">
 </head>
 <body>
      <img id="soggycat" src="billy.webp" data-tilt data-tilt-scale="1.06" />
