--- a/dry/index.html
+++ b/dry/index.html
@@ -16,7 +16,7 @@
   <meta property="og:description" content="A picture of a dry cat named Shark.">
   <meta name="title" content="dry?? cat">
   <meta property="og:title" content="dry?? cat">
-  <meta property="og:image" content="dry.webp">
+  <meta property="og:image" content="/dry/dry.webp">
 </head>
 <body>
      <img id="soggycat" src="dry.webp" data-tilt data-tilt-scale="1.06" />
