--- a/index.html
+++ b/index.html
@@ -1,33 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="referrer" content="always">
+
+  <title>soggy cat</title>
+  <link rel="icon" href="/img/icon.webp">
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+
+  <meta name="title" content="soggy cat">
+  <meta property="og:title" content="soggy cat">
+  
+  <meta name="description" content="a picture of a wet cat inside a bathtub.">
+  <meta property="og:description" content="a picture of a wet cat inside a bathtub.">
+  
+  <meta property="og:image" content="/img/soggycat.webp">
   <link rel="preconnect" href="//fonts.googleapis.com">
   <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
   <link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
-  <link rel="icon" href="/img/icon.webp">
-  <link rel="canonical" href="https://soggy.cat/">
   <link rel="stylesheet" href="/static/main.css">
-  <title>soggy cat</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="robots" content="index, follow">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="A picture of a wet cat inside a bathtub.">
-  <meta property="og:description" content="A picture of a wet cat inside a bathtub.">
-  <meta name="title" content="soggy cat">
-  <meta property="og:title" content="soggy cat">
-  <meta property="og:image" content="/img/soggycat.webp">
+  <link rel="icon" href="/img/icon.webp">
+  
 </head>
 <body>
-     <img id="soggycat" src="/img/soggycat.webp" data-tilt data-tilt-scale="1.06" />
+  
+     <img id="soggycat" src="/img/soggycat.webp" data-tilt data-tilt-scale="1.05" />
+  
      <div id="sidemenu">
-     <a href="/github/" class="menubuttonsa"><div class="menubuttons"><img src='/img/github.webp'/>GitHub</div></a>
-     <a href="nocss/" class="menubuttonsa"><div class="menubuttons"><img src='/img/nocss.svg'/>No CSS</div></a>
+     <a href="/github" class="menubuttonsa">
+       <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
+       
+     <a href="/nocss" class="menubuttonsa">
+       <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
+       
+     <a href="#" class="menubuttonsa"
+        onclick="document.getElementById('picker').click(); return false;">
+       <div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
      </div>
+
      <button id="circlebtn"></button>
+     <span id='player' style='display: none'></span>
+     <input type="file" id="picker" style="display: none" accept="image/*" />
+  
      <script src='/static/vanillatilt.js'></script>
      <script src="/static/main.js"></script>
-     <span id='player' style='display:none'></span>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.2/color-thief.umd.js"></script>
+  
 </body>
 </html>
