fix the github icon

--- a/goog/index.html
+++ b/goog/index.html
@@ -35,7 +35,7 @@
 	<div id="googtainer"></div>
 
 	<div id="sidemenu">
-		<a href="//soggy.cat/github/" class="menubuttonsa"> <div class="menubuttons"> <img src='//soggy.cat/img/github.webp'/>GitHub</div> </a>
+		<a href="//soggy.cat/github/" class="menubuttonsa"> <div class="menubuttons"> <img src='//soggy.cat/img/code.svg'/>GitHub</div> </a>
 		<a href="nocss" class="menubuttonsa"> <div class="menubuttons"> <img src='//soggy.cat/img/nocss.svg'/>No CSS</div> </a>
 	</div>
 
