--- a/search/index.html
+++ b/search/index.html
@@ -24,7 +24,7 @@
      <div class="gcse-search" style=""></div>
      <img id="soggycat" src="https://soggy.cat/img/soggycat.webp" data-tilt data-tilt-scale="1.06" />
      <div id="sidemenu">
-     <a href="/github/" class="menubuttonsa"><div class="menubuttons"><img src='/img/github.webp'/>GitHub</div></a>
+     <a href="/github/" class="menubuttonsa"><div class="menubuttons"><img src='/img/code.svg'/>GitHub</div></a>
      <a href="/nocss/" class="menubuttonsa"><div class="menubuttons"><img src='/img/nocss.svg'/>No CSS</div></a>
      </div>
      <button id="circlebtn"></button>
