--- a/dry/index.html
+++ b/dry/index.html
@@ -18,17 +18,18 @@
   <meta property="og:title" content="dry?? cat">
   <meta property="og:image" content="/dry/dry.webp">
 </head>
-<body>
-     <img id="soggycat" src="dry.webp" data-tilt data-tilt-scale="1.06" />
 
-     <div id="sidemenu">
-     	<a href="/github/" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/code.svg'/>GitHub</div> </a>
-     	<a href="nocss" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/nocss.svg'/>No CSS</div> </a>
-     </div>
+<body data-soggy-pagetype="vtilt-js">
+  <img id="soggycat" src="dry.webp" data-tilt data-tilt-scale="1.06" />
 
-     <button id="circlebtn"></button>
+  <div id="sidemenu">
+  <a href="/github/" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/code.svg'/>GitHub</div> </a>
+  <a href="nocss" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/nocss.svg'/>No CSS</div> </a>
+  </div>
 
-     	<script src='/static/vanillatilt.js'></script>
-     	<script src='/static/main.js'></script>
+  <button id="circlebtn"></button>
+
+  <script src='/static/vanillatilt.js'></script>
+  <script src='/static/main.js'></script>
 </body>
 </html>
