--- a/goog/index.html
+++ b/goog/index.html
@@ -19,7 +19,7 @@
 	<meta property="og:title" content="Goog...">
 	<meta property="og:image" content="/img/goog.webp">
 </head>
-<body>
+<body data-soggy-pagetype="three-js">
   <script type="importmap">
 		{
 			"imports": {
@@ -35,9 +35,20 @@
 	<div id="googtainer"></div>
 
 	<div id="sidemenu">
-		<a href="//soggy.cat/github/" class="menubuttonsa"> <div class="menubuttons"> <img src='//soggy.cat/img/code.svg'/>GitHub</div> </a>
-		<a href="nocss" class="menubuttonsa"> <div class="menubuttons"> <img src='//soggy.cat/img/nocss.svg'/>No CSS</div> </a>
+	<a href="/github" class="menubuttonsa">
+		<div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
+		
+	<a href="/nocss" class="menubuttonsa">
+		<div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
+		
+	<a href="#" class="menubuttonsa"
+		onclick="document.getElementById('picker').click(); return false;">
+		<div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
 	</div>
+
+	<button id="circlebtn"></button>
+	<span id='player' style='display: none'></span>
+	<input type="file" id="picker" style="display: none" accept="image/*" />
 
 	<button id="circlebtn"></button>
 	<script src='//soggy.cat/static/main.js'></script>
