--- a/goog/index.html
+++ b/goog/index.html
@@ -29,28 +29,27 @@
 				"OrbitControls": "./threejs/addons/OrbitControls.js"
 			}
 		}
-		</script> 
+	</script> 
 
 	<script type="module" src="index.js"></script>
 	<div id="googtainer"></div>
 
 	<div id="sidemenu">
-	<a href="/github" class="menubuttonsa">
-		<div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
+	<a href="//soggy.cat/github" class="menubuttonsa">
+		<div class="menubuttons"><img src='//soggy.cat/img/code.svg'/>code</div></a>
 		
-	<a href="/nocss" class="menubuttonsa">
-		<div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
+	<a href="./nocss" class="menubuttonsa">
+		<div class="menubuttons small"><img src='//soggy.cat/img/img/nocss.svg'/>no css</div></a>
 		
 	<a href="#" class="menubuttonsa"
 		onclick="document.getElementById('picker').click(); return false;">
-		<div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
+		<div class="menubuttons small"><img src='//soggy.cat/img/img/upload.svg'/>upload</div></a>
 	</div>
 
 	<button id="circlebtn"></button>
 	<span id='player' style='display: none'></span>
 	<input type="file" id="picker" style="display: none" accept="image/*" />
 
-	<button id="circlebtn"></button>
 	<script src='//soggy.cat/static/main.js'></script>
 </body>
 </html>
