debug texture stuff

--- a/goog/index.html
+++ b/goog/index.html
@@ -39,11 +39,11 @@
 		<div class="menubuttons"><img src='//soggy.cat/img/code.svg'/>code</div></a>
 		
 	<a href="./nocss" class="menubuttonsa">
-		<div class="menubuttons small"><img src='//soggy.cat/img/img/nocss.svg'/>no css</div></a>
+		<div class="menubuttons small"><img src='//soggy.cat/img/nocss.svg'/>no css</div></a>
 		
 	<a href="#" class="menubuttonsa"
 		onclick="document.getElementById('picker').click(); return false;">
-		<div class="menubuttons small"><img src='//soggy.cat/img/img/upload.svg'/>upload</div></a>
+		<div class="menubuttons small"><img src='//soggy.cat/img/upload.svg'/>upload</div></a>
 	</div>
 
 	<button id="circlebtn"></button>
