--- a/goog/index.html
+++ b/goog/index.html
@@ -7,6 +7,7 @@
 	<link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
 	<link rel="icon" href="./img/goog.webp">
 	<link rel="canonical" href="https://goog.soggy.cat/">
+	<link rel="stylesheet" href="//soggy.cat/static/main.css">
 	<link rel="stylesheet" href="goog.css">
 	<title>Goog...</title>
 	<meta charset="utf-8">
