try fixing /billy/ and /dry/

--- a/billy/index.html
+++ b/billy/index.html
@@ -6,6 +6,7 @@
   <link href="//fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
   <link rel="icon" href="icon.webp">
   <link rel="canonical" href="/billy/">
+  <link rel="stylesheet" href="/static/main.css">
   <link rel="stylesheet" href="billy.css">
   <title>billy...</title>
   <meta charset="utf-8">
