--- a/billy/nocss/index.html
+++ b/billy/nocss/index.html
@@ -20,6 +20,6 @@
   </script>
 </head>
 <body>
-     <img style="height:auto;width:40%;" src="../billy.webp"/>
+     <img src="../billy.webp" width="50%"/>
 </body>
 </html>
