--- a/dry/index.html
+++ b/dry/index.html
@@ -23,11 +23,20 @@
   <img id="soggycat" src="dry.webp" data-tilt data-tilt-scale="1.06" />
 
   <div id="sidemenu">
-  <a href="/github/" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/code.svg'/>GitHub</div> </a>
-  <a href="nocss" class="menubuttonsa"> <div class="menubuttons"> <img src='/img/nocss.svg'/>No CSS</div> </a>
-  </div>
-
-  <button id="circlebtn"></button>
+    <a href="/github" class="menubuttonsa">
+      <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
+      
+    <a href="/nocss" class="menubuttonsa">
+      <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
+      
+    <a href="#" class="menubuttonsa"
+      onclick="document.getElementById('picker').click(); return false;">
+      <div class="menubuttons small"><img src='/img/upload.svg'/>upload</div></a>
+    </div>
+  
+    <button id="circlebtn"></button>
+    <span id='player' style='display: none'></span>
+    <input type="file" id="picker" style="display: none" accept="image/*" />  
 
   <script src='/static/vanillatilt.js'></script>
   <script src='/static/main.js'></script>
