fix colorthief on billy and dry

--- a/dry/index.html
+++ b/dry/index.html
@@ -40,5 +40,6 @@
 
   <script src='/static/vanillatilt.js'></script>
   <script src='/static/main.js'></script>
+  <script src="/static/color-thief.umd.js"></script>
 </body>
 </html>
