--- a/dry/index.html
+++ b/dry/index.html
@@ -26,7 +26,7 @@
     <a href="/github" class="menubuttonsa">
       <div class="menubuttons"><img src='/img/code.svg'/>code</div></a>
       
-    <a href="/nocss" class="menubuttonsa">
+    <a href="nocss" class="menubuttonsa">
       <div class="menubuttons small"><img src='/img/nocss.svg'/>no css</div></a>
       
     <a href="#" class="menubuttonsa"
