--- a/goog/index.html
+++ b/goog/index.html
@@ -39,7 +39,7 @@
 	<a href="//soggy.cat/github" class="menubuttonsa">
 		<div class="menubuttons"><img src='//soggy.cat/img/code.svg'/>code</div></a>
 		
-	<a href="./nocss" class="menubuttonsa">
+	<a href="nocss" class="menubuttonsa">
 		<div class="menubuttons small"><img src='//soggy.cat/img/nocss.svg'/>no css</div></a>
 		
 	<a href="#" class="menubuttonsa"
